# napari-plugin-smart-microscopy-minimal

./: LICENSE  README.md  setup.cfg  setup.py  tox.ini
smart_microscopy_minimal/: _function.py
smart_microscopy_minimal/_tests/: test_function.py
