[metadata]
name = smart-microscopy-minimal
author = Rafael Camacho
author_email = camachodejay@yahoo.com
license = BSD-3
url = https://github.com/camachodejay/smart-microscopy-minimal
description = minimal example of a napari plugin, coded with the advice of pixel, robert is translating
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/camachodejay/smart-microscopy-minimal/issues
    Documentation = 'https://github.com/camachodejay/smart-microscopy-minimal#README.md'
    Source Code = https://github.com/camachodejay/smart-microscopy-minimal
    User Support = https://github.com/camachodejay/smart-microscopy-minimal/issues

[options]
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy


[options.entry_points] 
napari.plugin = 
    smart-microscopy-minimal = smart_microscopy_minimal
